adds history call, also some minor refactoring
